# claude-context-menu

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: build-dll.yml  release.yml
native/: CMakeLists.txt  exports.def
native/src/: command.cpp  command.hpp  dllmain.cpp  factory.cpp  factory.hpp
scripts/: doctor.js  install.js  uninstall.js
